--- a/hello.html
+++ b/hello.html
@@ -6,7 +6,7 @@
     <title>Hello!</title>
   </head>
   <body>
-    <h1>This is a new file</h1>
+    <h1 style="color: blue">This is a new file</h1>
     Hello, world!
     <h2>this is an h2</h2>
   </body>
